# tauri-ytdl

./: .windsurfrules  package.json
YoutubeDl/src-tauri/: Cargo.toml
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: youtube-dl-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
