[package]
name = "youtubedl"
version = "0.0.2"
description = "A Tauri App"
authors = ["timothy.prefol@gmail.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "youtubedl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusty_ytdl = "0.7.4"
tokio = "1.44.1"
tauri-plugin-shell = "2"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2"
regex = "1.10.3"
dirs = "5.0"
filetime = "0.2"

